Blender crashes on "spin tool" use #58221

Closed
opened 2018-11-29 23:02:55 +01:00 by David Brum · 21 comments

System Information
Operating system: Ubuntu Mate
Graphics card: Nvidia 1080

Blender Version
Broken: blender-2.80-26d5a3625ed-linux-glibc224-x86_64
Worked: (optional)

Error Description:

  • Blender crashes when i try to use the "Spin tool", from the toolbar, selecting it, and then when i click to perform the operation automatically closes.

Reproduce:

  1. New General Project
  2. Change to Modeling View
  3. Deselect Cube
  4. Select Cube by dragging the selection area
  5. Change to Spin tool
  6. Click one of the plus buttons (WITHOUT DRAGING).

I have also uploaded the video to YouTube if you are having trouble viewing it: https://youtu.be/IQCjPjbm3PY

**System Information** Operating system: Ubuntu Mate Graphics card: Nvidia 1080 **Blender Version** Broken: blender-2.80-26d5a3625ed-linux-glibc224-x86_64 Worked: (optional) Error Description: - Blender crashes when i try to use the "Spin tool", from the toolbar, selecting it, and then when i click to perform the operation automatically closes. Reproduce: 1. New General Project 2. Change to Modeling View 3. Deselect Cube 4. Select Cube by dragging the selection area 5. Change to Spin tool 6. Click one of the plus buttons (WITHOUT DRAGING). I have also uploaded the video to YouTube if you are having trouble viewing it: https://youtu.be/IQCjPjbm3PY
Author

Added subscriber: @DavidBrum

Added subscriber: @DavidBrum

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Can't redo this error. f81aeac2bc98624d1fd7de9a615303637cea39c1

Can't redo this error. `f81aeac2bc98624d1fd7de9a615303637cea39c1`
Member

Added subscriber: @Alaska

Added subscriber: @Alaska
Member

I'm also unable to reproduce the error, however, I'm on windows. Blender 2.8 26d5a3625e.
Could this be your issue? https://developer.blender.org/T57596

I'd recommend re-downloading Blender if the issue persists.

I'm also unable to reproduce the error, however, I'm on windows. Blender 2.8 26d5a3625ed. Could this be your issue? https://developer.blender.org/T57596 I'd recommend re-downloading Blender if the issue persists.
Author

I recorded the crash: (is not a vital thing to me, i was just testing the new version, and this happened).

blendercrash.mp4

I recorded the crash: (is not a vital thing to me, i was just testing the new version, and this happened). [blendercrash.mp4](https://archive.blender.org/developer/F5760634/blendercrash.mp4)

Added subscriber: @MaciejJutrzenka

Added subscriber: @MaciejJutrzenka

Also can't reproduce.

System Information
Operating system: Intel® Core™ i5-3210M CPU @ 2.50GHz × 4
Graphics card: GeForce 610M/PCIe/SSE2

Blender Version
Blender 2.80 Beta

Also can't reproduce. System Information Operating system: Intel® Core™ i5-3210M CPU @ 2.50GHz × 4 Graphics card: GeForce 610M/PCIe/SSE2 Blender Version Blender 2.80 Beta

Added subscriber: @ZedDB

Added subscriber: @ZedDB

Is this still an issue?

Is this still an issue?

Added subscriber: @complistic

Added subscriber: @complistic

I can reproduce this issue on Linux x86_64.

The trick to getting it to crash is clicking the plus without dragging.

Steps to reproduce:

  1. New General Project
  2. Modeling View
  3. Select Cube
  4. Change to Spin tool
  5. Click one of the plus buttons (without dragging).

Version: blender-2.80-141c6073ca39-linux-glibc224-x86_64
System: i7-3820 / GeForce GTX 670 / NVIDIA X 390.77
Linux: 4.15.0-43-generic / Ubuntu Xfce 18.04.1 LTS

I can reproduce this issue on Linux x86_64. The trick to getting it to crash is clicking the plus without dragging. Steps to reproduce: 1. New General Project 2. Modeling View 3. Select Cube 4. Change to Spin tool 5. Click one of the plus buttons (without dragging). Version: blender-2.80-141c6073ca39-linux-glibc224-x86_64 System: i7-3820 / GeForce GTX 670 / NVIDIA X 390.77 Linux: 4.15.0-43-generic / Ubuntu Xfce 18.04.1 LTS
Author

I format my pc with the latest Ubuntu, is working fine now, maybe something related with Ubuntu Mate?, don't think so do.

I format my pc with the latest Ubuntu, is working fine now, maybe something related with Ubuntu Mate?, don't think so do.

@complistic I still can't reproduce this on my end. However, those are not the latest nvidia drivers (410.93 is):
https://www.nvidia.com/Download/driverResults.aspx/141700/en-us

Check if you can't get those installed via the package manager in ubuntu and see if the problem still persists (make sure to keep up to date with blender betas too!)

@complistic I still can't reproduce this on my end. However, those are not the latest nvidia drivers (410.93 is): https://www.nvidia.com/Download/driverResults.aspx/141700/en-us Check if you can't get those installed via the package manager in ubuntu and see if the problem still persists (make sure to keep up to date with blender betas too!)

@ZedDB

390.77 are the latest available in the regular "Additional Drivers" section of Ubuntu 18.04.1 LTS so I thought I would try the blender update first in case updating the drivers fixes it. (so I can get you more information)

Updating blender to blender-2.80-445433a6913f-linux-glibc224-x86_64 results in the same problem, here is a video of the problem:

blender_2.8_spin_crash.mp4

One thing I do notice is that if I don't deselect and reselect the cube it sometimes works.

Also here is the output from /tmp/blender.crash.txt :

# Blender 2.80 (sub 43), Commit date: 2019-02-04 23:43, Hash 445433a6913f
bpy.ops.object.editmode_toggle()  # Operator
bpy.ops.mesh.select_all(action='DESELECT')  # Operator
bpy.ops.mesh.spin(angle=0, center=(0, 0, 0), axis=(0, 0, 1))  # Operator

# backtrace
./blender(BLI_system_backtrace+0x1d) [0x1ba860d]
./blender() [0x11568f9]
/lib/x86_64-linux-gnu/libc.so.6(+0x3ef20) [0x7f08215fdf20]
./blender(BM_edge_splice+0) [0x16c4d30]
./blender(bmo_spin_exec+0x642) [0x1716302]
./blender(BMO_op_exec+0x31) [0x16db9a1]
./blender() [0x13857a0]
./blender() [0x115bef0]
./blender(ED_undo_operator_repeat+0x1b0) [0x1186d60]
./blender(WM_gizmo_target_property_float_set+0x27) [0x1180487]
./blender() [0x117d454]
./blender() [0x117d6a9]
./blender() [0x115e7a6]
./blender() [0x115f433]
./blender() [0x115f7fc]
./blender(wm_event_do_handlers+0x230) [0x115fe60]
./blender(WM_main+0x20) [0x1157300]
./blender(main+0x31e) [0x10bcece]
/lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xe7) [0x7f08215e0b97]
./blender(_start+0x2a) [0x115330a]

I'll look into updating my Nvidia drivers when I get a chance, probably tomorrow.

Thanks,
David

@ZedDB 390.77 are the latest available in the regular "Additional Drivers" section of Ubuntu 18.04.1 LTS so I thought I would try the blender update first in case updating the drivers fixes it. (so I can get you more information) Updating blender to blender-2.80-445433a6913f-linux-glibc224-x86_64 results in the same problem, here is a video of the problem: [blender_2.8_spin_crash.mp4](https://archive.blender.org/developer/F6510695/blender_2.8_spin_crash.mp4) One thing I do notice is that if I don't deselect and reselect the cube it sometimes works. Also here is the output from /tmp/blender.crash.txt : ``` # Blender 2.80 (sub 43), Commit date: 2019-02-04 23:43, Hash 445433a6913f bpy.ops.object.editmode_toggle() # Operator bpy.ops.mesh.select_all(action='DESELECT') # Operator bpy.ops.mesh.spin(angle=0, center=(0, 0, 0), axis=(0, 0, 1)) # Operator # backtrace ./blender(BLI_system_backtrace+0x1d) [0x1ba860d] ./blender() [0x11568f9] /lib/x86_64-linux-gnu/libc.so.6(+0x3ef20) [0x7f08215fdf20] ./blender(BM_edge_splice+0) [0x16c4d30] ./blender(bmo_spin_exec+0x642) [0x1716302] ./blender(BMO_op_exec+0x31) [0x16db9a1] ./blender() [0x13857a0] ./blender() [0x115bef0] ./blender(ED_undo_operator_repeat+0x1b0) [0x1186d60] ./blender(WM_gizmo_target_property_float_set+0x27) [0x1180487] ./blender() [0x117d454] ./blender() [0x117d6a9] ./blender() [0x115e7a6] ./blender() [0x115f433] ./blender() [0x115f7fc] ./blender(wm_event_do_handlers+0x230) [0x115fe60] ./blender(WM_main+0x20) [0x1157300] ./blender(main+0x31e) [0x10bcece] /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xe7) [0x7f08215e0b97] ./blender(_start+0x2a) [0x115330a] ``` I'll look into updating my Nvidia drivers when I get a chance, probably tomorrow. Thanks, David

This is likely a bug in the tool logic looking at the backtrace, not the drivers,

I couldn't crash this tool from basic testing, please give exact instructions for how to redo + test file if needed.

This is likely a bug in the tool logic looking at the backtrace, not the drivers, I couldn't crash this tool from basic testing, please give exact instructions for how to redo + test file if needed.

@ideasman42 The steps to reproduce I've found that cause this crash 100% of the time for me are:

  1. New General Project
  2. Change to Modeling View
  3. Deselect Cube
  4. Select Cube by dragging the selection area
  5. Change to Spin tool
  6. Click one of the plus buttons (WITHOUT DRAGING).

I have also uploaded the video to YouTube if you are having trouble viewing it: https://youtu.be/IQCjPjbm3PY

@ideasman42 The steps to reproduce I've found that cause this crash 100% of the time for me are: 1. New General Project 2. Change to Modeling View 3. Deselect Cube 4. Select Cube by dragging the selection area 5. Change to Spin tool 6. Click one of the plus buttons (WITHOUT DRAGING). I have also uploaded the video to YouTube if you are having trouble viewing it: https://youtu.be/IQCjPjbm3PY
Campbell Barton self-assigned this 2019-02-05 03:10:10 +01:00

Thanks, Step 3 & 4 are important since you're spinning half the cube's faces.

Always give exact steps in future to avoid confusion.

Thanks, Step 3 & 4 are important since you're spinning half the cube's faces. Always give exact steps in future to avoid confusion.

This issue was referenced by af2d2d4dff

This issue was referenced by af2d2d4dff77a1436b26007b5aa183075d91d537

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

@ideasman42 Just tried this in blender-2.80-08ab09cf04d9-linux-glibc224-x86_64 and it works, thanks!

@DavidBrum I trust this is working for you also?

@ideasman42 Just tried this in blender-2.80-08ab09cf04d9-linux-glibc224-x86_64 and it works, thanks! @DavidBrum I trust this is working for you also?
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58221
No description provided.