Fix T58221: Spin tool w/ merge first/last crashes

Spinning geometry that included non boundary/wire edges
crashed when merge first/last enabled.